PROD-2636 #comment Fix Price & duration info icon tooltip alignment

--- a/src-ts/tools/work/work-self-service/intake-forms/bug-hunt/BugHunt.module.scss
+++ b/src-ts/tools/work/work-self-service/intake-forms/bug-hunt/BugHunt.module.scss
@@ -5,5 +5,6 @@
 
   .bug-hunt-icon {
     background: $tc-grad18;
+    margin-left: 0;
   }
 }
